log
Thu 09 May 2024 06:43:08 PM UTC: 
 tests:  1|8
total_score: 0/70
3fd5fbd
Thu 09 May 2024 06:45:21 PM UTC: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
6e85a24
Thu 09 May 2024 06:51:03 PM UTC: 
 treemap.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:97:1: error: control reaches end of non-void function [-Werror=return-type]
   97 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
520e1cf
Thu 09 May 2024 06:54:27 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:93:11: error: expected ‘(’ before ‘{’ token
   93 |         if{
      |           ^
      |           (
treemap.c:98:1: error: control reaches end of non-void function [-Werror=return-type]
   98 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
103cfab
Thu 09 May 2024 06:55:27 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
67260c8
Thu 09 May 2024 06:57:40 PM UTC: 
 treemap.c | 17 ++++-------------
 1 file changed, 4 insertions(+), 13 deletions(-)
test.c: In function ‘searchTreeMap’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
test.c:607: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
e5eb0c2
Thu 09 May 2024 06:58:21 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|7
total_score: 5/70
f14db1a
Thu 09 May 2024 06:59:48 PM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  8|7
total_score: 5/70
9c0c5eb
Thu 09 May 2024 07:00:51 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
34ee405
Thu 09 May 2024 07:17:35 PM UTC: 
 treemap.c | 35 +++++++++++++++++++++++++++++++++++
 1 file changed, 35 insertions(+)
 tests:  13|5
total_score: 25/70
320d7e0
Thu 09 May 2024 07:20:05 PM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 25/70
6ee7d22
Thu 09 May 2024 07:21:48 PM UTC: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  17|3
total_score: 30/70
fcbf196
Fri 10 May 2024 09:33:20 PM UTC: 
 treemap.c | 27 +++++++++++++++++++++++++++
 1 file changed, 27 insertions(+)
 tests:  0|0
fbdda14
